@@ -1,6 +1,7 @@
 Revision history for Email::ARF::Report
 
 {{$NEXT}}
+          look for type/subtype in ContentType, not composite/discrete
 
 0.009     2013-08-09 23:08:01 America/New_York
           ensure compatibility with Email::MIME 1.923
